<resources>
    <string name="number">8142575552</string>
    <string name="app_name">SMS Forwarder</string>
    <string name="settings_header">Running</string>
    <string name="about_header">About</string>
    <string name="phone_title">Phone number</string>
    <string name="phone_not_set">Not set yet!</string>
    <string name="forwarding_title">Forwarding</string>
    <string name="filtering_title">Sender filter</string>
    <string name="filter_type_title">Filter type</string>
    <string name="edit_list_title">Filter list</string>
    <string name="filter_list_entries_number">Entries: </string>
    <string name="app_desc"></string>
    <string name="oss_title">Open-source! (MIT)</string>
    <string name="oss_desc">Code lives at GitHub</string>

    <string name="icon_title">App icon by Icojam</string>
    <string name="icon_desc">From public domain Blue Bits pack</string>

    <string name="add_to_list">Add sender</string>
    <string name="remove_from_list">Delete</string>
    <string name="format_hint">Please use international format for phone numbers whenever possible.</string>
    <string name="clear_all">Clear list</string>

    <string name="edit_entry">Edit entry</string>
    <string name="new_entry">New entry</string>

    <string name="confirm_title">Please confirm deletion</string>
    <string name="confirm_text">Are you sure you want to remove all entries from this list? This cannot be undone.</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string-array name="filter_types">
        <item>Blacklist</item>
        <item>Whitelist</item>
    </string-array>
    <string-array name="filter_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="filter_type_summary_black">Blacklist</string>
    <string name="filter_type_summary_white">Whitelist</string>

</resources>
