<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_header">
        <EditTextPreference
            android:key="phone"
            android:title="@string/phone_title"
            android:inputType="phone"/>
        <SwitchPreference
            android:key="enabled"
            android:title="@string/forwarding_title"/>
        <SwitchPreference
            android:key="filter"
            android:title="@string/filtering_title"
            android:dependency="enabled"/>
        <ListPreference
            android:key="list_type"
            android:title="@string/filter_type_title"
            android:entries="@array/filter_types"
            android:entryValues="@array/filter_values"
            android:defaultValue="0"
            android:dependency="filter"/>
        <Preference
            android:key="filter_list"
            android:title="@string/edit_list_title"
            android:dependency="filter">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="net.bnfour.smsforwarder"
                android:targetClass="net.bnfour.smsforwarder.ListEditActivity"/>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/about_header">
        <Preference
            android:title="@string/app_name"
            android:summary="@string/app_desc"/>
        <Preference
            android:title="@string/oss_title"
            android:summary="@string/oss_desc">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/bnfour/smsforwarder"/>
        </Preference>
        <Preference
            android:title="@string/icon_title"
            android:summary="@string/icon_desc">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.icojam.com/blog/?p=253"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>